# norwegian_wood

./: CMakeLists.txt  README
covar/: SBN_covariance_matrices_xcheck_690x690.root  covmx_generation_nu_nubar_xcheck_yeonjae_dune+sbn.c  covmx_generation_nu_nubar_xcheck_yeonjae_dune.c
inc/: genDune.h  plotting_tools.h
plots/: dune_plots.ipynb
src/: CMakeLists.txt  biprob.cxx  combined.cxx  combined_3p0.cxx  dune_sbn.cxx  genDune.cxx  plt_cpv.cxx  plt_order.cxx  probtest.cxx
xml/: dune+sbn.xml  dune.xml  dune_Dec2020.xml  dune_nevis.xml  sbn_osc.xml
yeonjae/sb_macros/: README_sb_macros  detector.h  functions.c  genie_CC.c  genie_mu.c  genie_tau_test.c  mark_run.c  mark_run2.c  norm.h  params.h  plotfunctions.c  split_file.c
yeonjae/sb_macros/split/: make_xml.sh  template.xml
